<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.pets_finder.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="2"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:visible="false"
        android:id="@+id/action_delete_advertisement"
        android:orderInCategory="3"
        android:title="@string/delete_advertisement"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_map_fragment"
        android:icon="@drawable/ic_map_button"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:title="@string/show_advertisements_on_map" />
</menu>