<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/createAdFragment">

    <CheckBox
        android:id="@+id/cbMissingPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/missing" />

    <CheckBox
        android:id="@+id/cbFoundPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cbMissingPet"
        android:text="@string/found_pet" />

    <CheckBox
        android:id="@+id/cbHomelessPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cbFoundPet"
        android:text="@string/homeless" />

    <CheckBox
        android:id="@+id/cbCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbMissingPet"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/cat" />

    <CheckBox
        android:id="@+id/cbDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbMissingPet"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cbCat"
        android:text="@string/dog" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbCat"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="address"
        android:ems="10"
        android:hint="@string/address"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="description"
        android:layout_marginEnd="20dp"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:ems="10"
        android:textColorHint="#757575" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecycler"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/etDescription"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        android:visibility="gone"
        app:layoutManager="LinearLayoutManager" />

    <Button
        android:id="@+id/btnSaveAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagesRecycler"
        android:layout_marginStart="150dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnSelectImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSaveAd"
        android:layout_marginStart="150dp"
        android:text="@string/select_images" />

</RelativeLayout>
