<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:id="@+id/registrationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_margin"
            android:layout_marginTop="@dimen/full_margin"
            android:layout_marginEnd="@dimen/full_margin"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_margin"
            android:layout_marginTop="@dimen/full_margin"
            android:layout_marginEnd="@dimen/full_margin"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_account_circle"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLayout"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_margin"
            android:layout_marginTop="@dimen/full_margin"
            android:layout_marginEnd="@dimen/full_margin"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_margin"
            android:layout_marginTop="@dimen/full_margin"
            android:layout_marginEnd="@dimen/full_margin"
            android:autofillHints="password"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            app:passwordToggleEnabled="true"
            tools:ignore="UnusedAttribute">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPasswordLayout"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_margin"
            android:layout_marginTop="@dimen/full_margin"
            android:layout_marginEnd="@dimen/full_margin"
            android:autofillHints="confirm password"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            app:passwordToggleEnabled="true"
            tools:ignore="UnusedAttribute">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/full_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSigned"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="?attr/colorOnPrimarySurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/btnSigned"
                app:layout_constraintEnd_toEndOf="@id/btnSigned"
                app:layout_constraintStart_toStartOf="@id/btnSigned"
                app:layout_constraintTop_toTopOf="@id/btnSigned"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvRedirectLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/full_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginEnd="@dimen/full_margin"
            android:layout_marginBottom="@dimen/full_margin"
            android:gravity="center_horizontal"
            android:text="@string/already_have_an_account_login"/>
    </LinearLayout>

</ScrollView>